# lantern

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/supertramp/lantern/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/supertramp/lantern/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/supertramp/lantern/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
heapdump/: build.gradle
heapdump/src/androidTest/java/com/supertramp/heapdump/: ExampleInstrumentedTest.kt
heapdump/src/main/: AndroidManifest.xml
heapdump/src/main/cpp/: CMakeLists.txt  heapdump_bridge.cpp  hprof_dump.cpp  hprof_strip.cpp
heapdump/src/main/cpp/include/: hprof_dump.h
heapdump/src/main/java/com/supertramp/heapdump/: HeapDumper.java
heapdump/src/test/java/com/supertramp/heapdump/: ExampleUnitTest.kt
xhook/: build.gradle
xhook/src/androidTest/java/com/supertramp/xhook/: ExampleInstrumentedTest.kt
xhook/src/main/: AndroidManifest.xml
xhook/src/main/cpp/: CMakeLists.txt
xhook/src/test/java/com/supertramp/xhook/: ExampleUnitTest.kt
